--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ python = "^3.8"
 f1-packets = "^2022.1.2"
 influxdb-client = "^1.30.0"
 websockets = "^10.3"
+pyttsx3 = "2.71"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
